<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/viewPagerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/viewPagerRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="250dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentTop="true" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewPagerRelativeLayout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/amazon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/amazon" />

            <TextView
                android:id="@+id/myntra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/myntra" />

            <TextView
                android:id="@+id/flipkart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/flipkart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/snapDeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/snapDeal" />

            <TextView
                android:id="@+id/ebay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/ebay" />

            <TextView
                android:id="@+id/jabong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_translate_black_24dp"
                android:gravity="center"
                android:text="@string/Jabong" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
